opam-version: "2.0"
version: "1.0"
maintainer: "htwaliir@logaan.net"
authors: ["Logan Campbell"]
homepage: "http://github.com/logaan/htwaliir"
bug-reports: "https://github.com/logaan/htwaliir/issues"
dev-repo: "git+https://github.com/logaan/htwaliir.git"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
